--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1254,3 +1254,27 @@ video {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+.clients-grid {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+
+@media (max-width: 992px) {
+  .clients-grid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+  
+@media (max-width: 400px) {
+  .clients-grid {
+    /* display: grid; */
+    /* grid-template-columns: repeat(1, minmax(0, 1fr)); */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+}
