--- a/src/css/App.css
+++ b/src/css/App.css
@@ -231,3 +231,62 @@ body {
 		opacity: 0.5;
 	}
 }
+
+
+/* custom css */
+.app-footer-div2 {
+	/* border: 1px solid red; */
+}
+
+.pb-8 {
+	padding-bottom: 2rem;
+}
+
+.pt-20 {
+	padding-top: 5rem;
+}
+
+.mt-20 {
+	margin-top: 5rem;
+}
+
+
+/* footer ul */
+@media (min-width: 640px) {
+	.sm\:gap-8 {
+			grid-gap: 2rem;
+			gap: 2rem;
+		}
+}
+
+.gap-8 {
+	grid-gap: 2rem;
+	gap: 2rem;
+}
+
+.gap-4 {
+	grid-gap: 1rem;
+	gap: 1rem;
+}
+
+.dark .dark\:bg-ternary-dark {
+	--tw-bg-opacity: 1;
+	background-color: rgb(30 56 81 / var(--tw-bg-opacity));
+}
+
+.p-4 {
+	padding: 1rem;
+}
+
+@media (min-width: 768px) {
+	.md\:text-3xl {
+			font-size: 1.875rem;
+			line-height: 2.25rem;
+		}
+}
+
+@media (min-width: 640px) {
+	.sm\:mb-28 {
+			margin-bottom: 7rem;
+		}
+}
