--- a/src/css/App.css
+++ b/src/css/App.css
@@ -290,3 +290,68 @@ body {
 			margin-bottom: 7rem;
 		}
 }
+
+/** contact form **/
+.dark .dark\:bg-secondary-dark {
+	--tw-bg-opacity: 1;
+	background-color: rgb(16 45 68 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 640px) {
+	.sm\:p-10 {
+			padding: 2.5rem;
+		}
+}
+
+.shadow-xl {
+	--tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+	--tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+@media (max-width: 780px) {
+	.flex-col-reverse {
+			flex-direction: column-reverse;
+		}
+}
+
+.max-w-xl {
+	max-width: 36rem;
+}
+
+.m-4 {
+	margin: 1rem;
+}
+
+.mr-4 {
+	margin-right: 1rem;
+}
+
+.p-6 {
+	padding: 1.5rem;
+}
+
+.mb-8 {
+	margin-bottom: 2rem;
+}
+
+.mb-4 {
+	margin-bottom: 1rem;
+}
+
+.dark .dark\:border-primary-dark {
+	--tw-border-opacity: 1;
+	border-color: rgb(13 36 56 / var(--tw-border-opacity));
+}
+
+.tracking-wider {
+	letter-spacing: 0.05em;
+}
+
+.font-medium {
+	font-weight: 500;
+}
+
+.w-40 {
+	width: 10rem;
+}
